# aika-api

./: Cargo.toml
crates/soundcloud_dl/: Cargo.toml
migrations/: 20240326153321_initial_setup.sql
scripts/: info.sh  migrate.sh  setup.sh
src/: lib.rs  main.rs  states.rs
src/db/: content.rs  content_refs.rs  error.rs  mod.rs
src/db/sqlite/: albums.rs  artists.rs  audios.rs  files.rs  images.rs  mod.rs  musics.rs
src/db/sqlite/refs/: album_artists.rs  mod.rs  music_albums.rs  music_artist.rs  music_audio.rs  music_audios.rs  music_image.rs  music_images.rs
src/db/tables/: artist.rs  audios.rs  files.rs  images.rs  mod.rs  musics.rs
src/db/tables/cross_ref/: mod.rs  music_artists.rs  music_audios.rs  music_images.rs
src/routes/: error.rs  mod.rs
src/routes/cdn/: file.rs  get_file.rs  mod.rs
src/routes/db/: mod.rs
src/routes/db/albums/: album.rs  mod.rs
src/routes/db/artists/: artist.rs  mod.rs
src/routes/db/audios/: mod.rs
src/routes/db/images/: mod.rs
src/routes/db/musics/: mod.rs
src/routes/db/musics/music/: albums.rs  artists.rs  audio.rs  cover.rs  mod.rs
src/routes/dbr/: mod.rs
src/routes/dbr/musics/: mod.rs
src/routes/dbr/musics/music/: audio.rs  cover.rs  mod.rs
src/routes/fs/: mod.rs  upload.rs
src/routes/nyaa/: download.rs  fetch.rs  mod.rs
src/routes/soundcloud/: download.rs  import.rs  mod.rs  preview.rs  search.rs
src/routes/youtube/: mod.rs
