workspace = { members = ["crates/soundcloud_dl"] }
[package]
name = "music-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sclouddl = { path = "https://github.com/natoxpy/sclouddl.git" }
# nyaadl = { git = "https://github.com/natoxpy/sclouddl.git" }  

actix-web = "4"
mime = "0.3.17"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
youtube_dl = "0.9.0"
actix-cors = "0.7.0"
paste = "1.0.14"
chrono = "0.4.34"
